Addition in pom.xml